--- a/main_app/static/book-list/book.css
+++ b/main_app/static/book-list/book.css
@@ -80,7 +80,7 @@ body{
     height: 40vh;
 
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),
-                url('./../academic/pencil-backgorund.jpg');     
+                url('https://jentaylorplaytherapy.com/wp-content/uploads/2019/03/thought-catalog-217861-unsplash.jpg');     
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
