--- a/main_app/static/routine/routine.css
+++ b/main_app/static/routine/routine.css
@@ -80,7 +80,7 @@ body{
     height: 40vh;
 
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),
-                url('./../academic/pencil-backgorund.jpg');     
+                url('https://helenaargona.files.wordpress.com/2018/05/tim-arterbury-126157-unsplash.jpg');     
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
