--- a/main_app/templates/academic.html
+++ b/main_app/templates/academic.html
@@ -91,9 +91,14 @@
 					<a href=" {{ url_for('play') }} ">
 
 						<img 
-							src=" https://www.diggingtoroam.com/wp-content/uploads/2018/03/mike-fox-467489-unsplash.jpg " 
+							src=" {{ url_for('static', filename='academic/play.jpg') }} " 
 							alt="Junior School Play" 
 						/>
+
+						<!-- <img 
+							src=" https://www.diggingtoroam.com/wp-content/uploads/2018/03/mike-fox-467489-unsplash.jpg " 
+							alt="Junior School Play" 
+						/> -->
 
 						<p>PLAY</p>
 					</a>
@@ -101,11 +106,16 @@
 
 				<div class="nursary">
 					<a href=" {{ url_for('nursary') }} ">
-
+						
 						<img 
-							src=" https://www.humanitas.net/health/app/uploads/2018/05/pan-xiaozhen-423533-unsplash.jpg " 
+							src=" {{ url_for('static', filename='academic/nursary.jpg') }} " 
 							alt=" Junior School Nursary" 
 						/>
+
+						<!-- <img 
+							src=" https://www.humanitas.net/health/app/uploads/2018/05/pan-xiaozhen-423533-unsplash.jpg " 
+							alt=" Junior School Nursary" 
+						/> -->
 
 						<p>NURSARY</p>
 					</a>
@@ -115,11 +125,16 @@
 			<div class="row">
 				<div class="class-one">
 					<a href=" {{ url_for('one') }} ">
-
+						
 						<img 
-							src= " https://dailymom.com/portal/wp-content/uploads/2019/03/jerry-wang-1223251-unsplash.jpg " 
+							src= " {{ url_for('static', filename='academic/one.jpg') }} " 
 							alt=" Junior School Class One" 
 						/>
+						
+						<!-- <img 
+							src= " https://dailymom.com/portal/wp-content/uploads/2019/03/jerry-wang-1223251-unsplash.jpg " 
+							alt=" Junior School Class One" 
+						/> -->
 						
 						<p>ONE</p>
 					</a>
@@ -127,11 +142,16 @@
 				
 				<div class="class-two">
 					<a href=" {{ url_for('two') }} ">
-
+						
 						<img 
-							src=" https://www.fenimoreartmuseum.org/wp-content/uploads/jeshoots-com-357165-unsplash.jpg " 
+							src=" {{ url_for('static', filename='academic/two.jpg') }} " 
 							alt=" Junior School Class Two" 
 						/>
+
+						<!-- <img 
+							src=" https://www.fenimoreartmuseum.org/wp-content/uploads/jeshoots-com-357165-unsplash.jpg " 
+							alt=" Junior School Class Two" 
+						/> -->
 
 						<p>TWO</p>
 					</a>
@@ -141,12 +161,17 @@
 			<div class="row">
 				<div class="class-three">
 						<a href=" {{ url_for('three') }} ">
-
+						
 						<img 
+							src=" {{ url_for('static', filename='academic/three.jpg') }} " 
+							alt=" Junior School Class Three" 
+						/>
+
+						<!-- <img 
 							src=" https://images.unsplash.com/photo-1533222535026-754c501569dd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80 " 
 							alt=" Junior School Class Three" 
 						
-						/>
+						/> -->
 
 						<p>THREE</p>
 					</a>
@@ -156,9 +181,14 @@
 					<a href=" {{ url_for('four') }} ">
 
 						<img 
-							src=" https://images.unsplash.com/photo-1536337005238-94b997371b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q " 
+							src=" {{ url_for('static', filename='academic/four.jpg') }} " 
 							alt=" Junior School Class Four" 
 						/>
+
+						<!-- <img 
+							src=" https://images.unsplash.com/photo-1536337005238-94b997371b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q " 
+							alt=" Junior School Class Four" 
+						/> -->
 						
 						<p>FOUR</p>
 					</a>
@@ -170,9 +200,14 @@
 					<a href=" {{ url_for('five') }} ">
 
 						<img 
-							src=" https://s3-ap-southeast-2.amazonaws.com/nz.dkhosting.com.au/wp-content/uploads/2019/05/03120249/jonny-mclaren-1449434-unsplash-1600x1066.jpg " 
+							src=" {{ url_for('static', filename='academic/five.jpg') }} " 
 							alt=" Junior School Class Five" 
 						/>
+
+						<!-- <img 
+							src=" https://s3-ap-southeast-2.amazonaws.com/nz.dkhosting.com.au/wp-content/uploads/2019/05/03120249/jonny-mclaren-1449434-unsplash-1600x1066.jpg " 
+							alt=" Junior School Class Five" 
+						/> -->
 
 						<p>FIVE</p>
 					</a>
@@ -182,9 +217,14 @@
 					<a href=" {{ url_for('six') }} ">
 
 						<img 
-							src=" https://patchogue.greaterlongisland.com/wp-content/uploads/sites/5/2018/11/santi-vedri-707620-unsplash.jpg " 
+							src=" {{ url_for('static', filename='academic/six.jpg') }} " 
 							alt=" Junior School Class Six" 
 						/>
+						
+						<!-- <img 
+							src=" https://patchogue.greaterlongisland.com/wp-content/uploads/sites/5/2018/11/santi-vedri-707620-unsplash.jpg " 
+							alt=" Junior School Class Six" 
+						/> -->
 
 						<p>SIX</p>
 					</a>
@@ -196,9 +236,14 @@
 					<a href=" {{ url_for('seven') }} ">
 
 						<img 
-							src=" https://biosciencebybupe.files.wordpress.com/2018/12/nikhita-s-615116-unsplash1.jpg " 
+							src=" {{ url_for('static', filename='academic/seven.jpg') }} " 
 							alt=" Junior School Class Seven" 
 						/>
+
+						<!-- <img 
+							src=" https://biosciencebybupe.files.wordpress.com/2018/12/nikhita-s-615116-unsplash1.jpg " 
+							alt=" Junior School Class Seven" 
+						/> -->
 
 						<p>SEVEN</p>
 					</a>
@@ -208,9 +253,14 @@
 					<a href=" {{ url_for('eight') }} ">
 
 						<img 
-							src=" https://d1pe6f90ru47yo.cloudfront.net/wp-content/uploads/2018/10/18014630/tra-nguyen-459276-unsplash.jpg " 
+							src=" {{ url_for('static', filename='academic/eight.jpg') }} " 
 							alt=" Junior School Class Eight" 
 						/>
+						
+						<!-- <img 
+							src=" https://d1pe6f90ru47yo.cloudfront.net/wp-content/uploads/2018/10/18014630/tra-nguyen-459276-unsplash.jpg " 
+							alt=" Junior School Class Eight" 
+						/> -->
 						
 						<p>EIGHT</p>
 					</a>
