--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -71,8 +71,14 @@
     <div class="principal-section">
         <div class="principal-image">
             <img class="principal-img" 
+                 src=" {{ url_for('static', filename='home/principal.jpg') }} "
+                 alt="Junior School and College School principal" 
+            />
+
+            <!-- <img class="principal-img" 
                  src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/principal1.jpg "
-                 alt="Junior School and College School principal" />
+                 alt="Junior School and College School principal" 
+            /> -->
         </div>
 
         <div class="principal-speech">
@@ -168,9 +174,14 @@
 
                     <div class="imge-content">
                         <img 
-                            src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm1.jpg " 
+                            src=" {{ url_for('static', filename='home/notice1.jpg') }} " 
                             alt="Orientation in 2020"
                         />
+
+                        <!-- <img 
+                            src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm1.jpg " 
+                            alt="Orientation in 2020"
+                        /> -->
                     </div>
                 </div>
 
@@ -195,9 +206,14 @@
 
                     <div class="imge-content">
                         <img 
-                            src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm2.jpg  " 
+                            src=" {{ url_for('static', filename='home/notice2.jpg') }} " 
                             alt="Orientation in 2020"
                         />
+
+                        <!-- <img 
+                            src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm1.jpg " 
+                            alt="Orientation in 2020"
+                        /> -->
                     </div>
                 </div>
 
@@ -223,9 +239,14 @@
 
                     <div class="imge-content">
                         <img 
-                            src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm3.jpg " 
+                            src=" {{ url_for('static', filename='home/notice3.jpg') }} " 
                             alt="Orientation in 2020"
                         />
+
+                        <!-- <img 
+                            src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm1.jpg " 
+                            alt="Orientation in 2020"
+                        /> -->
                     </div>
                 </div>
             </div>
@@ -243,9 +264,14 @@
             <div class="notice">
                 <div class="orientaton">
                     <img 
-                        src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm1.jpg " 
-                        alt="Orientation Class" 
+                        src=" {{ url_for('static', filename='home/notice1.jpg') }} " 
+                        alt="Orientation in 2020"
                     />
+
+                    <!-- <img 
+                        src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm1.jpg " 
+                        alt="Orientation in 2020"
+                    /> -->
 
                     <div class="notice-text">
                         <h2>Orientation Class</h2>
@@ -263,9 +289,14 @@
 
                 <div class="pec-jsc">
                     <img 
-                        src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm2.jpg " 
-                        alt="PEC JSC Results" 
+                        src=" {{ url_for('static', filename='home/notice2.jpg') }} " 
+                        alt="pec jsc result"
                     />
+
+                    <!-- <img 
+                        src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm1.jpg " 
+                        alt="Orientation in 2020"
+                    /> -->
                     <div class="notice-text">
                         <h2>PEC JSC Result Published</h2>
                         <p>
@@ -281,9 +312,15 @@
 
                 <div class="result">
                     <img 
-                        src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm3.jpg " 
-                        alt="Annual Exam Results" 
+                        src=" {{ url_for('static', filename='home/notice1.jpg') }} " 
+                        alt="annual exam result"
                     />
+
+                    <!-- <img 
+                        src=" http://limpidthemes.com/Themeforest/Pathshala/Pathshala-HTML/assets/img/news/news-sm1.jpg " 
+                        alt="Orientation in 2020"
+                    /> -->
+
                     <div class="notice-text">
                         <h2>Annual Exam Result Published</h2>
                         <p>
