--- a/main_app/static/curicullam/curicullam.css
+++ b/main_app/static/curicullam/curicullam.css
@@ -103,7 +103,7 @@ body{
     height: 40vh;
 
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),
-                url('./../academic/pencil-backgorund.jpg');     
+                url('https://jentaylorplaytherapy.com/wp-content/uploads/2019/03/thought-catalog-217861-unsplash.jpg');     
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -243,7 +243,7 @@ body{
 footer{
     height: 100vh;
     background: linear-gradient( rgba(0, 0, 0, 0.705), rgba(0, 0, 0, 0.705) ),
-                url(../home/footer.jpg);
+                url('https://helenaargona.files.wordpress.com/2018/05/tim-arterbury-126157-unsplash.jpg');
     
     margin-top: 5%;
 }
